--- a/ios/ChatPoint.xcodeproj/xcshareddata/xcschemes/ChatPoint.xcscheme
+++ b/ios/ChatPoint.xcodeproj/xcshareddata/xcschemes/ChatPoint.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "hrmsapp.app"
-               BlueprintName = "hrmsapp"
-               ReferencedContainer = "container:hrmsapp.xcodeproj">
+               BuildableName = "ChatPoint.app"
+               BlueprintName = "ChatPoint"
+               ReferencedContainer = "container:ChatPoint.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "hrmsappTests.xctest"
-               BlueprintName = "hrmsappTests"
-               ReferencedContainer = "container:hrmsapp.xcodeproj">
+               BuildableName = "ChatPointTests.xctest"
+               BlueprintName = "ChatPointTests"
+               ReferencedContainer = "container:ChatPoint.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hrmsapp.app"
-            BlueprintName = "hrmsapp"
-            ReferencedContainer = "container:hrmsapp.xcodeproj">
+            BuildableName = "ChatPoint.app"
+            BlueprintName = "ChatPoint"
+            ReferencedContainer = "container:ChatPoint.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hrmsapp.app"
-            BlueprintName = "hrmsapp"
-            ReferencedContainer = "container:hrmsapp.xcodeproj">
+            BuildableName = "ChatPoint.app"
+            BlueprintName = "ChatPoint"
+            ReferencedContainer = "container:ChatPoint.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
