--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "lottie-react-native": "^6.3.1",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-insta-story": "^1.1.9",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
